# Bike-Demand-Prediction-for-Smart-Cities

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  PREDICTION_FIXES.md  README.md  docker-compose.prod.yml  docker-compose.training.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  model-training.yml
airflow/dags/: data_ingestion_dag.py  feature_engineering_dag.py  model_training_dag.py  weather_enrichment_dag.py
config/: feature_config.yml
dashboard/: README.md  app.py
dashboard/.streamlit/: config.toml  secrets.toml.example
dashboard/pages/: 1_🔮_Demand_Forecast.py  2_📊_Model_Performance.py  3_✅_Data_Quality.py  4_💓_System_Health.py
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/dashboard/: Dockerfile
docker/training/: Dockerfile
docs/: API_QUICK_START.md  ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_SETUP_COMPLETE.md  PRODUCTION_WORKFLOW.md  QUICK_START.md  START_PRODUCTION.md
docs/tutorial/: 00-introduction.md  01-setup.md  02-database.md  03-10-placeholders.md  03-data-collection.md  04-feature-engineering.md  05-model-training.md  06-model-serving.md  07-dashboard.md  08-airflow.md  09-monitoring.md  10-cicd.md  11-design-decisions.md  12-production.md  13-troubleshooting.md  README.md
infrastructure/: docker-compose.yml
infrastructure/monitoring/: prometheus.yml
infrastructure/postgres/: init.sql  schema.sql
logs/scheduler/: latest
models/: catboost_20251225_221358.cbm  catboost_20251225_221358.pkl  lightgbm_20251225_221358.pkl  xgboost_20251225_221358.pkl
notebooks/: 00_end_to_end_system_demo.ipynb  01_exploratory_data_analysis.ipynb  README.md
scripts/: backfill_historical_data.py  backfill_weather.py  diagnose_dashboard.py  generate_features.py  run_data_collection.py  setup_dvc.sh  setup_project.sh  test_api.py  test_data_collection.py  test_features.py  test_full_pipeline.py  train_production_model.py
src/config/: database.py  logging_config.py  settings.py
src/data/: models.py
src/data/collectors/: base_collector.py  citi_bike_collector.py  weather_collector.py
src/data/processors/: data_validator.py
src/data/storage/: postgres_handler.py
src/features/: base_features.py  holiday_features.py  lag_features.py  rolling_features.py  temporal_features.py  weather_features.py
src/serving/: model_loader.py  predictor.py
src/serving/api/: __init__.py  (+1 more)
src/training/: data_preparation.py  train_pipeline.py
src/utils/: feature_store.py
tests/unit/: test_api.py  test_collectors.py  test_features.py
(+4 files in other folders)
