[project]
name = "bike-demand-prediction-for-smart-cities"
version = "0.1.0"
description = "Level 2 MLOps bike demand forecasting system with Airflow, MLflow, FastAPI, and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML & Data Science
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.0",
    "prophet>=1.1.5",
    "statsmodels>=0.14.0",
    "tensorflow>=2.15.0",
    # MLOps Tools
    "mlflow>=2.9.0",
    "dvc>=3.30.0",
    "dvc-s3>=3.0.0",
    "optuna>=3.5.0",
    "great-expectations>=0.18.0",
    "evidently>=0.4.11",
    # Database & Storage
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    # API & Web
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "streamlit>=1.29.0",
    # Airflow
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-postgres>=5.10.0",
    # Utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "holidays>=0.38",
    "pytz>=2023.3",
    "loguru>=0.7.2",
    # Monitoring
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    # Plotting & Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "nbformat>=5.10.4",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",

    # Code Quality
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.7.1",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",

    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
    "notebook>=7.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
